--- a/css/checkout.css
+++ b/css/checkout.css
@@ -38,21 +38,6 @@
   justify-self: end;
 }
 
-.add {
-  position: absolute;
-  width: 100%;
-  height: 20vh;
-  top: 100%;
-  border: 2px solid #e3333b;
-  color: #e3333b;
-  display: grid;
-  place-items: center;
-  background-color: white;
-}
-.add > p {
-  align-self: start;
-}
-
 #main {
   min-height: 80vh;
   background-color: #f5f0f0;
@@ -61,18 +46,15 @@
   align-self: start;
   font-family: "Poppins", sans-serif;
 }
-#main h1 {
-  color: #e3333b;
-  align-self: strat;
-  font-size: 1.6rem;
-}
-#main #main-section {
+
+#main-section {
   display: grid;
   place-items: center;
   align-self: start;
   margin-top: 1rem;
 }
-#main .main_card {
+
+.main_card {
   min-height: 55vh;
   width: 80%;
   display: grid;
@@ -82,36 +64,9 @@
   margin-bottom: 1rem;
   border-radius: 10px;
 }
-#main .main_card .image_card {
-  width: 100%;
-  display: grid;
-  place-items: center;
-  padding: 1rem 0;
-}
-#main .main_card .image_card img {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-}
-#main .main_card .title {
-  color: #e3333b;
-  font-size: 1rem;
-}
-#main .main_card .text {
+.main_card h3,
+.main_card p {
   text-align: center;
-  font-size: 0.89rem;
-  width: 90%;
-}
-#main .main_card .btn {
-  border: 2px solid #e3333b;
-  background-color: white;
-  padding: 10px;
-  margin-bottom: 1rem;
-}
-#main .main_card .btn:hover {
-  background-color: #e3333b;
-  color: white;
-  border: 2px solid #f8f3f3;
 }
 
 #footer {
@@ -146,4 +101,4 @@
   }
 }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=checkout.css.map */
