--- a/scss/checkout.scss
+++ b/scss/checkout.scss
@@ -36,20 +36,6 @@
         }
     }
 }
-.add {
-    position: absolute;
-    width: 100%;
-    height: 20vh;
-    top: 100%;
-    border: 2px solid #e3333b;
-    color: #e3333b;
-    display: grid;
-    place-items: center;
-    background-color: white;
-    > p {
-        align-self: start;
-    }
-}
 #main {
     min-height: 80vh;
     background-color: #f5f0f0;
@@ -57,58 +43,25 @@
     place-items: center;
     align-self: start;
     font-family: "Poppins", sans-serif;
-    h1 {
-        color: #e3333b;
-        align-self: strat;
-        font-size: 1.6rem;
-    }
-    #main-section {
-        display: grid;
-        place-items: center;
-        align-self: start;
-        margin-top: 1rem;
-    }
-    .main_card {
-        min-height: 55vh;
-        width: 80%;
-        display: grid;
-        place-items: center;
-        align-self: start;
-        background-color: white;
-        margin-bottom: 1rem;
-        border-radius: 10px;
-
-        .image_card {
-            width: 100%;
-            display: grid;
-            place-items: center;
-            padding: 1rem 0;
-            img {
-                width: 200px;
-                height: 200px;
-                border-radius: 50%;
-            }
-        }
-        .title {
-            color: #e3333b;
-            font-size: 1rem;
-        }
-        .text {
-            text-align: center;
-            font-size: 0.89rem;
-            width: 90%;
-        }
-        .btn {
-            border: 2px solid #e3333b;
-            background-color: white;
-            padding: 10px;
-            margin-bottom: 1rem;
-            &:hover {
-                background-color: #e3333b;
-                color: white;
-                border: 2px solid #f8f3f3;
-            }
-        }
+}
+#main-section {
+    display: grid;
+    place-items: center;
+    align-self: start;
+    margin-top: 1rem;
+}
+.main_card {
+    min-height: 55vh;
+    width: 80%;
+    display: grid;
+    place-items: center;
+    align-self: start;
+    background-color: white;
+    margin-bottom: 1rem;
+    border-radius: 10px;
+    h3,
+    p {
+        text-align: center;
     }
 }
 #footer {
@@ -121,6 +74,7 @@
         color: rgb(211, 210, 210);
     }
 }
+
 @media only screen and (min-width: 600px) {
     #main-section .main_card {
         width: 44%;
