--- a/css/checkout.css
+++ b/css/checkout.css
@@ -46,6 +46,20 @@
   align-self: start;
   font-family: "Poppins", sans-serif;
 }
+#main > button {
+  border: 2px solid #e3333b;
+  background-color: white;
+  padding: 10px;
+  margin-bottom: 1rem;
+  justify-self: center;
+  text-align: center;
+  width: 200px;
+}
+#main > button:hover {
+  background-color: #e3333b;
+  color: white;
+  border: 2px solid #f8f3f3;
+}
 
 #main-section {
   display: grid;
