--- a/scss/checkout.scss
+++ b/scss/checkout.scss
@@ -43,6 +43,20 @@
     place-items: center;
     align-self: start;
     font-family: "Poppins", sans-serif;
+    > button {
+        border: 2px solid #e3333b;
+        background-color: white;
+        padding: 10px;
+        margin-bottom: 1rem;
+        justify-self: center;
+        text-align: center;
+        width: 200px;
+        &:hover {
+            background-color: #e3333b;
+            color: white;
+            border: 2px solid #f8f3f3;
+        }
+    }
 }
 #main-section {
     display: grid;
