--- a/scss/checkout.scss
+++ b/scss/checkout.scss
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+body {
+    font-family: "Poppins", sans-serif;
+}
 #header {
     display: grid;
     place-items: center;
