--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,12 +2,14 @@
     margin: 0;
     padding: 0;
 }
+body {
+    font-family: "Poppins", sans-serif;
+}
 #header {
     display: grid;
     place-items: center;
     grid-template-columns: 1fr 1fr;
     min-height: 10vh;
-    font-family: "Poppins", sans-serif;
     padding: 1rem;
     h2 {
         text-align: start;
